src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Account_Archive_Date__c</fullName>
        <description>One year from date of document upload.  Created 01/16/2014 by Klorenti, Mavens Consultant</description>
        <formula>Upload_Date_MERC__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_GLBL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Reference_Number_MERC__c</fullName>
        <description>When content has been approved for usage within the Meeting, it should be uploaded with an Approval Reference Number. Oliver Dunford 6th Nov 2013.</description>
        <label>Approval Reference Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archive_Date_MERC__c</fullName>
        <description>Populate Date the document is to be Archived. Created 12/3/2013 by KLorenti, Mavens Consulting</description>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Archive_Date_MERC__c</fullName>
        <description>One year from Budget Date. Created 01/16/2014 by KLorenti, Mavens Consulting</description>
        <formula>Budget_MERC__r.Budget_Date_MERC__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship from Content to Budget. Created 01/17/2014 by KLorenti, Mavens Consulting</description>
        <label>Budget</label>
        <referenceTo>Budget_MERC__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_MERC__c</fullName>
        <description>Populates Retention Code based on Document Type. Created 01/15/2014 by KLorenti, Mavens Consulting</description>
        <formula>CASE( Document_Type_MERC__c,
&quot;Institutional Notification&quot;,&quot;ICO210&quot;,
&quot;Notification agreement for services (filled version by HCP)&quot;,&quot;ICO210&quot;,
&quot;Notification agreement for sponsorship (filled version by HCP)&quot;,&quot;ICO210&quot;,
&quot;FMV&quot;,&quot;ICO210&quot;,
&quot;Service Rendered Documents&quot;,&quot;ICO210&quot; ,
&quot;HCP Transparency Reporting Consent (filled version by HCP)&quot;,&quot;ICO210&quot;,
&quot;CV&quot;,&quot;ICO210&quot;,
&quot;HCP Related Items&quot; ,&quot;ICO210&quot;,
&quot;HCP Exceptions&quot;,&quot;ICO210&quot;,
&quot;Invitations&quot;,&quot;MKT100&quot;,
&quot;Meeting Documents&quot;,&quot;MKT100&quot;,
&quot;Registration Form&quot;,&quot;MKT100&quot;,
&quot;Slide Kits&quot;,&quot;MKT100&quot;,
&quot;Approvals and Supporting Documents&quot;,&quot;MKT100&quot;,
&quot;Agendas&quot;,&quot;MKT100&quot;,
&quot;Meeting Exceptions&quot;,&quot;MKT100&quot;,
&quot;Cover Letter for Contract&quot;,&quot;LEG500&quot;,
&quot;Single Event Contract and Appendices&quot;,&quot;LEG500&quot;,
&quot;C2P Documents&quot;,&quot;LEG500&quot;,
&quot;MSA&quot;,&quot;LEG500&quot;,
&quot;Work Order&quot;,&quot;LEG500&quot;,
&quot;Services Rendered Documents&quot;,&quot;LEG500&quot;,
&quot;Partial Payment Justification&quot;,&quot;LEG500&quot;,
&quot;Contract Exceptions&quot;,&quot;LEG500&quot;,
&quot;Invoices&quot;,&quot;ACT100&quot;, 
&quot;Expense Reimbursement&quot;,&quot;ACT100&quot;,
&quot;MPC Budget and Invoices&quot;,&quot;ACT100&quot;,
&quot;Invoice Exceptions&quot;,&quot;ACT100&quot;,
&quot;Certificate of Attendance&quot;,&quot;MKT100&quot;,
&quot;Meeting Participant Notice&quot;,&quot;MKT100&quot;,
&quot;Registration Confirmation Details&quot;,&quot;MKT100&quot;,
&quot;Sponsorship Agreement&quot;,&quot;MKT100&quot;,
&quot;Proof of Consulting Services&quot;,&quot;MKT100&quot;,
&quot;None&quot;)</formula>
        <label>Retention Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Archive_Date_MERC__c</fullName>
        <description>One year from Contract Expiration Date. Created 01/17/2014 by KLorenti, Mavens Consulting</description>
        <formula>HCP_Contract_MERC__r.Contract_Expiration_Date_MERC__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_MERC__c</fullName>
        <description>Capture End Date of Contract when uploading documents to HCP Contract. Created 12/3/2013 by KLorenti, Mavens Consulting</description>
        <formula>IF(HCP_Contract_MERC__r.RecordType.Name = &quot;Master Service Agreement&quot;, 
HCP_Contract_MERC__r.MSA_End_Date_MERC__c, 
HCP_Contract_MERC__r.Contract_Expiration_Date_MERC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date_MERC__c</fullName>
        <description>Populate the Contract Start Date based on the type of Contract.  If a MSA then use the MSA Start Date.  If a Single Event to Work Order then populate with the Meeting Start Date.  Created by John A Adams 4/21/2014</description>
        <formula>IF(HCP_Contract_MERC__r.RecordType.Name = &quot;Master Service Agreement&quot;, 
HCP_Contract_MERC__r.MSA_Start_Date_MERC__c,  HCP_Contract_MERC__r.Meeting_Name_MERC__r.Date_of_Event_MERC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence_MERC__c</fullName>
        <description>Capture Country of Residence for HCP. Created 12/3/2013 by KLorenti, Mavens Consulting</description>
        <formula>TEXT(HCP_Contract_MERC__r.Account_MERC__r.Country_of_Residence_GLBL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Residence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Note_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates copies of attachments of the original invoice to a credit note. This should only be populated programmatically when an Invoice is cloned to be a credit note.</description>
        <label>Credit Note</label>
        <referenceTo>Invoice_MERC__c</referenceTo>
        <relationshipLabel>Original Invoice Content</relationshipLabel>
        <relationshipName>Content_CN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Id_MERC__c</fullName>
        <description>Pull in Customer ID for HCP that document will be attached to. Created 12/6/2013 by KLorenti, Mavens Consulting</description>
        <formula>Account_GLBL__r.Cust_Id_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type_MERC__c</fullName>
        <description>Created to capture types of Documents uploaded. Created 12/2/2013 by KLorenti, Mavens Consulting</description>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Institutional Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notification agreement for services (filled version by HCP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notification agreement for sponsorship (filled version by HCP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP Transparency Reporting Consent (filled version by HCP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slide Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approvals and Supporting Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover Letter for Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Event Contract and Appendices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2P Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Rendered Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Payment Justification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Reimbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPC Budget and Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agendas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP Exceptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Exceptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Exceptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Participant Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Confirmation Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expose_on_Portal_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the content to be available on the Portal. Created 01/13/2014 by KLorenti, Mavens Consulting</description>
        <label>Expose on Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Contract_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCP Contract</label>
        <referenceTo>HCP_Contract_MERC__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCP_Name_MERC__c</fullName>
        <description>Pull in name of customer/HCP from Account. Created 12/6/2013 by KLorenti, Mavens Consulting</description>
        <formula>HCP_Contract_MERC__r.Account_MERC__r.FirstName &amp; &quot; &quot; &amp;  HCP_Contract_MERC__r.Account_MERC__r.LastName</formula>
        <label>HCP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Archive_Date_MERC__c</fullName>
        <description>One year from Invoice Date. Created 01/17/2014 by KLorenti, Mavens Consulting</description>
        <formula>Invoice_MERC__r.Invoice_Date_MERC__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Invoice. Created 12/6/2013 by KLorenti, Mavens Consulting</description>
        <label>Invoice</label>
        <referenceTo>Invoice_MERC__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Archive_Date_MERC__c</fullName>
        <description>Meeting Start Date plus 1 year to capture the Meeting Archive Date. Created 01/16/2014 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_MERC__r.Date_of_Event_MERC__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_City_MERC__c</fullName>
        <description>Capture City of Meeting when uploading documents to the Meeting. Created 12/3/2013 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_MERC__r.City_of_Meeting_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Country_MERC__c</fullName>
        <description>Capture Country of Meeting when uploading documents to a meeting. Created 12/3/2013 by KLorenti, Mavens Consulting</description>
        <formula>TEXT(Meeting_MERC__r.Event_Country_MERC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship from Content to Meeting Participant. Created 01/16/2014 by KLorenti, Mavens Consulting</description>
        <label>Meeting Participant</label>
        <referenceTo>Meeting_Participant_MERC__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Date_MERC__c</fullName>
        <description>Capture Meeting Start Date when uploading a document to the meeting. Created 12/3/2013 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_MERC__r.Date_of_Event_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Participant_Name_MERC__c</fullName>
        <description>Pulls in Name of Meeting Participant from Invoice. Created 2/5/2014 by KLorenti, Mavens Consulting</description>
        <formula>Invoice_MERC__r.Participant_MERC__c</formula>
        <label>Participant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_1_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product 1</label>
        <referenceTo>Product_Group_GLBL__c</referenceTo>
        <relationshipLabel>Content (Product 1)</relationshipLabel>
        <relationshipName>Content1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_2_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product 2</label>
        <referenceTo>Product_Group_GLBL__c</referenceTo>
        <relationshipLabel>Content (Product 2)</relationshipLabel>
        <relationshipName>Content2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_3_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product 3</label>
        <referenceTo>Product_Group_GLBL__c</referenceTo>
        <relationshipLabel>Content (Product 3)</relationshipLabel>
        <relationshipName>Content3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upload_Date_MERC__c</fullName>
        <description>Today&apos;s date. Created 01/16/2014 by KLorenti, Mavens Consulting</description>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upload Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>Account_MERC</fullName>
        <active>true</active>
        <label>Account_MERC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Budget_MERC</fullName>
        <active>true</active>
        <label>Budget_MERC</label>
    </recordTypes>
    <recordTypes>
        <fullName>HCP_Contract_MERC</fullName>
        <active>true</active>
        <label>HCP_Contract_MERC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoice_MERC</fullName>
        <active>true</active>
        <label>Invoice_MERC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting_MERC</fullName>
        <active>true</active>
        <label>Meeting_MERC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting_Participant_MERC</fullName>
        <active>true</active>
        <label>Meeting_Participant_MERC</label>
    </recordTypes>
</CustomObject>